# selium-modules

./: AGENTS.md
.github/: breezy.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml
atlas/: Cargo.toml
atlas/client/: Cargo.toml
atlas/client/src/: lib.rs
atlas/protocol/: Cargo.toml  build.rs
atlas/server/: Cargo.toml
atlas/server/src/: lib.rs
remote-client/: Cargo.toml
remote-client/cli/: Cargo.toml
remote-client/cli/src/: main.rs
remote-client/client/: Cargo.toml
remote-client/client/src/: lib.rs
remote-client/protocol/: Cargo.toml  build.rs
remote-client/protocol/schemas/: remote_client.fbs
remote-client/protocol/src/: lib.rs
remote-client/protocol/src/fbs/: mod.rs
remote-client/protocol/src/fbs/remote_client/protocol/: abi_param_generated.rs  abi_param_kind_generated.rs  abi_scalar_type_generated.rs  abi_signature_generated.rs  capability_generated.rs  channel_create_request_generated.rs  channel_create_response_generated.rs  channel_delete_request_generated.rs  channel_read_response_generated.rs  channel_ref_generated.rs  channel_ref_kind_generated.rs  channel_write_response_generated.rs  entrypoint_arg_generated.rs  entrypoint_arg_kind_generated.rs  io_frame_generated.rs  process_log_channel_request_generated.rs  process_log_channel_response_generated.rs  process_start_request_generated.rs  process_start_response_generated.rs  process_stop_request_generated.rs  publish_request_generated.rs  remote_client_message_generated.rs  remote_client_payload_generated.rs  scalar_value_generated.rs  subscribe_request_generated.rs
remote-client/server/: Cargo.toml
remote-client/server/src/: lib.rs
switchboard/: Cargo.toml  README.md
switchboard/client/: Cargo.toml
switchboard/client/src/: channel.rs  encoding.rs  lib.rs  messaging.rs  switchboard.rs
switchboard/core/: Cargo.toml
switchboard/core/src/: lib.rs
switchboard/protocol/: Cargo.toml  build.rs
switchboard/protocol/schemas/: switchboard.fbs
switchboard/protocol/src/: lib.rs
switchboard/protocol/src/fbs/: mod.rs
switchboard/protocol/src/fbs/selium/switchboard/: adopt_mode_generated.rs  adopt_request_generated.rs  backpressure_generated.rs  direction_generated.rs  switchboard_message_generated.rs  switchboard_payload_generated.rs
switchboard/server/: Cargo.toml
switchboard/server/src/: lib.rs
switchboard/tests/request-reply/: Cargo.toml  build.rs
switchboard/tests/request-reply/src/: lib.rs
switchboard/tests/request-reply/tests/: request_reply.rs
tests/request-reply/: Cargo.toml
tests/request-reply/src/: lib.rs
tests/request-reply/tests/: request_reply.rs
