[package]
name = "selium-atlas"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
selium-atlas-protocol = { workspace = true }
selium-switchboard = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
