[package]
name = "selium-atlas-server"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
selium-atlas-protocol = { workspace = true }
selium-switchboard = { workspace = true }
selium-userland = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
