[package]
name = "selium-switchboard"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures = { workspace = true, features = ["alloc", "std"] }
pin-project = { workspace = true }
selium-switchboard-protocol = { workspace = true }
selium-userland = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }

[dev-dependencies]
selium-switchboard-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
