[package]
name = "selium-switchboard-server"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-switchboard-core = { workspace = true }
selium-switchboard-protocol = { workspace = true }
selium-userland = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
