[package]
name = "selium-test-request-reply"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
flatbuffers = "25.12"
selium-switchboard = { path = "../../switchboard/client" }
selium-userland = { path = "../../../../selium/newkernel/crates/userland" }
tracing = "0.1"

[build-dependencies]
flatbuffers-build = "0.2"
flatc-fork = "0.5.0"
